[metadata]
name = hello
version = attr: cylc.hello.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = Hilary Oliver
author_email = hilary.j.oliver@gmail.com
url=
description = A cylc install plugin example
keywords =
    cylc
    workflow
    workflow-engine
    workflow-automation
    workflow-management
license = GPL
license_file = COPYING
platforms = any
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Atmospheric Science
python_requires = >=3.7

[options]
packages = find_namespace:
python_requires = >=3.7
include_package_data = True
install_requires =
    cylc-flow==8.0rc4.*  # the .* permits dev versions

[options.packages.find]
include = cylc*

[options.extras_require]

[options.entry_points]
cylc.pre_configure =
    hello = cylc.hello.entry_points:pre_configure
cylc.post_install =
    hello = cylc.hello.entry_points:post_install
